# mpi_types_report

./: 01_sending_primitive_objects.c  02_sending_primitive_arrays.c  03_sending_raw_structs.c  04_exploring_structs.c  05_sending_mpi_structs_incorrect.c  06_sending_mpi_structs_incorrect.c  07_sending_mpi_structs_correct.c  08_sending_mpi_structs_correct.c  09_other_mpi_types.c  CMakeLists.txt  README.md  structs.h
.github/workflows/: mpi_types_report_ci.yml
